@@ -175,7 +175,7 @@ public class FieldGen extends FieldGenOrMethodGen {
     public void setInitValue( final float f ) {
         checkType(Type.FLOAT);
         if (f != 0.0) {
-            value = new Float(f);
+            value = Float.valueOf(f);
         }
     }
 
@@ -183,7 +183,7 @@ public class FieldGen extends FieldGenOrMethodGen {
     public void setInitValue( final double d ) {
         checkType(Type.DOUBLE);
         if (d != 0.0) {
-            value = new Double(d);
+            value = Double.valueOf(d);
         }
     }
 
